<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=" "
        android:textColor="@color/accent_bright"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/accent_bright"
        android:backgroundTint="@color/accent_bright"
        android:textColorHint="@color/accent_bright"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button20"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/control_button_background"
            android:onClick="clearButtonClick"
            android:text="@string/clearText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button19"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/operation_button_background"
            android:onClick="addButtonClick"
            android:text="@string/addText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button18"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/control_button_background"
            android:onClick="equalButtonClick"
            android:text="@string/equalsText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button17"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="zeroButtonClick"
            android:text="@string/zeroText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button16"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/control_button_background"
            android:onClick="decimalButtonClick"
            android:text="@string/decimalText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button15"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/operation_button_background"
            android:onClick="subtractButtonClick"
            android:text="@string/subtractText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button14"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="threeButtonClick"
            android:text="@string/threeText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button13"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="twoButtonClick"
            android:text="@string/twoText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button12"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="oneButtonClick"
            android:text="@string/oneText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button11"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/operation_button_background"
            android:onClick="multiplyButtonClick"
            android:text="@string/multiplyText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button10"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="sixButtonClick"
            android:text="@string/sixText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button9"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="fiveButtonClick"
            android:text="@string/fiveText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button8"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="fourButtonClick"
            android:text="@string/fourText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button7"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/operation_button_background"
            android:onClick="divideButtonClick"
            android:text="@string/divideText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button6"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="nineButtonClick"
            android:text="@string/nineText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="eightButtonClick"
            android:text="@string/eightText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/number_button_background"
            android:onClick="sevenButtonClick"
            android:text="@string/sevenText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/control_button_background"
            android:onClick="backspaceButtonClick"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/control_button_background"
            android:onClick="parenthesesCloseButtonClick"
            android:text="@string/parenthesesCloseText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/control_button_background"
            android:onClick="parenthesesOpenButtonClick"
            android:text="@string/parenthesesOpenText"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>